fix game over layout bug

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -227,14 +227,23 @@ button {
 
 .game-over {
   width: 400px;
-  height: 200px;
+  height: 450px;
   padding: 30px;
+  text-align: center;
+
+  .logo {
+    width: 160px;
+    height: 270px;
+    margin: 0 auto;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
 
   a,
   p {
     font-family: monospace;
     color: #4f4;
-  font-size: 40px !important;
+    font-size: 40px !important;
     font-size: 14px;
     margin: 0 0 14px;
     font-weight: 700;
